--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,12 @@ matplotlib
 seaborn
 scipy
 statsmodels
+pickle
+jupyter
+
+# For GPU usage
+xgboost==1.4.2
+tensorflow==2.5.0
 
 # Other packages
 joblib
@@ -14,4 +20,5 @@ plotly
 IPython
 h5py
 keras
-tensorflow==2.5.0
+
+
