--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,15 @@
-# requirements.txt
-
-# Basics
-pandas==1.4.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-seaborn
-scipy==1.8.0
+pandas
+scipy
 statsmodels
-pickle
-jupyter==1.0.0
-scikit-learn==1.0.2
-
-# For GPU usage
-xgboost==1.4.2
-tensorflow==2.5.0
-
-# Other packages
-joblib==1.1.0
+seaborn
+matplotlib
+xgboost
+scikit-learn
+joblib
 shap
-plotly==5.16.1
-ipython==8.0.1
-h5py==3.9.0
+plotly
+ta
+tensorflow
+h5py
 
 
